--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ embedded-hal = "0.2.3"
 # Remove me if you don't want logging
 log = "0.4.11"
 teensy4-panic = "0.2.0"
+imxrt-hal = "*"
 
 [dependencies.teensy4-bsp]
 version = "0.2"
