rework to take advantage of Box<dyn>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ usb-device= "*"
 imxrt-usbd = "*"
 imxrt-uart-log = "*"
 
+alloc-cortex-m = "*"
+
 keycode-translation = { path = "keycode_translation" }
 
 [dependencies.teensy4-bsp]
